# Dotfiles

./: rc.lua
Books/: Books  Ego Is the Enemy (Ryan Holi_ (Z-Library).epub  How to Win Friends and Influence People -- Dale Carnegie -- 1981 -- Simon & Schuster -- 0671027034 -- db452e7e3cdb0aad5b97292a1fed13ef -- Anna’s Archive.epub  The Mindfulness and Accepta_ (Z-Library).epub
Coding/OpenGL/: CMakeLists.txt
Coding/OpenGL/res/: Basic.shader
Coding/OpenGL/src/: Application.cpp  IndexBuffer.cpp  Renderer.cpp
Coding/OpenGl/VirtualWorld_git/: CMakeLists.txt
Coding/OpenGl/VirtualWorld_git/src/: Camera.cpp  Camera.hpp  Renderer.cpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
Coding/OpenGl/VirtualWorld_git/src/shaders/: light.vert  shader.frag  shader.vert
Krita/: Blank.kra  Blank.kra-autosave.kra  Blank.kra~  Learning.kra  Learning.kra~
Obsidian/: Astral.md  Flow state.md  Idea.md  alaaeddinebouramdane@cegepdrummond.etu.ca.md
Photoshop/: Blank.psd
Sound Recordings/: Recording (10).m4a  Recording (11).m4a  Recording (12).m4a  Recording (13).m4a  Recording (14).m4a  Recording (15).m4a  Recording (16).m4a  Recording (17).m4a  Recording (18).m4a  Recording (19).m4a  Recording (2).m4a  Recording (3).m4a  Recording (4).m4a  Recording (5).m4a  Recording (6).m4a  Recording (7).m4a  Recording (8).m4a  Recording (9).m4a  Recording.m4a
Terraria/: config.json  favorites.json
ags/: config.js  style.css
awesome/: autostart.sh  rc.lua
chrome/: userChrome.css
gtk-3.0/: settings.ini
hypr/: hyprland.conf  hyprpaper.conf
kitty/: kitty.conf
picom/: picom.conf
(+134 files in other folders)
